tests/negative/gold/type2-test.gold
tests/negative/type2-test.toit:5:7: error: Unresolved type: 'NonExisting'
glob /NonExisting := null
      ^~~~~~~~~~~
Compilation failed
